# rrF

./: .gitignore  CMakeLists.txt  FindEvtGen.cmake  FindHepMC.cmake  FindROOT.cmake  History.org  LICENSE  Makefile  README.md  README_segR.md  readRootFile.cc  requirements.txt  rrF.cc  simpleEvtGenRO.cc  tau_enu.dec
c++/: CMakeLists.txt  FindEvtGen.cmake  FindHepMC.cmake  FindROOT.cmake
c++/src/: Bc.dec  EvtProbeModel.cpp  RrfEvent.cpp  RrfEvent.h  RrfVar.cpp  RrfVar.h  chi.dec  cut.cc  cut.h  rrF.cc  segR.cc  segR.h  segR_test.cc
python/: pandas_rrFpy.ipynb  requirements.txt  rrFpy_test.ipynb
python/rrfpy/: rrfpy_pandas.py
src/: EvtProbeModel.cpp  RrfDescriptor.cpp  RrfDescriptor.h  RrfEvent.cpp  RrfEvent.h  RrfVar.cpp  RrfVar.h  cut.cc  cut.h  probe.dec  rrF.cc  segR.cc  segR.h  segR_test.cc  simpleEvtGenRO.cc  tau_Xnu.dec
src/EvtGenModels/: EvtProbeModel.hh
